// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedList renders correctly when ordered 1`] = `
<div
  className="container"
>
  <div
    className="committee"
  >
    <div
      className="number"
    >
      1
    </div>
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "testkom",
          "name": "Testkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
  <div
    className="committee"
  >
    <div
      className="number"
    >
      2
    </div>
  </div>
  <div
    className="committee"
  >
    <div
      className="number"
    >
      3
    </div>
  </div>
</div>
`;

exports[`SelectedList renders correctly with empty choices 1`] = `
<div
  className="container"
>
  <div
    className="committee"
  />
  <div
    className="committee"
  />
  <div
    className="committee"
  />
</div>
`;

exports[`SelectedList renders correctly with no choices 1`] = `
<div
  className="container"
>
  <div
    className="committee"
  />
  <div
    className="committee"
  />
  <div
    className="committee"
  />
</div>
`;

exports[`SelectedList renders correctly with one out of three choices 1`] = `
<div
  className="container"
>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "testkom",
          "name": "Testkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
  <div
    className="committee"
  />
  <div
    className="committee"
  />
</div>
`;

exports[`SelectedList renders correctly with three out of three choices 1`] = `
<div
  className="container"
>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "testkom",
          "name": "Testkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "bestkom",
          "name": "Bestkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "sickkom",
          "name": "Sickkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
</div>
`;

exports[`SelectedList renders correctly with two out of three choices 1`] = `
<div
  className="container"
>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "testkom",
          "name": "Testkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "bestkom",
          "name": "Bestkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
  <div
    className="committee"
  />
</div>
`;

exports[`SelectedList renders with more than total choices 1`] = `
<div
  className="container"
>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "testkom",
          "name": "Testkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
  <div
    className="committee"
  >
    <Selectable
      committee={
        Object {
          "icon": "MockIcon",
          "info": "Default info",
          "key": "bestkom",
          "name": "Bestkom",
        }
      }
      onClick={[Function]}
      selected={false}
      small={true}
    />
  </div>
</div>
`;
